[gd_scene load_steps=2 format=3 uid="uid://gxhal5rg0400"]

[ext_resource type="Script" path="res://src/scenes/tose.gd" id="1_oliu3"]

[node name="Tose" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_oliu3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -16.0
offset_right = 173.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="LoadEXE" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Load EXE
"

[node name="LoadPIG" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Load PIG.BIN / .BIN
"

[node name="LoadScanPIG" type="Button" parent="HBoxContainer"]
layout_mode = 2
tooltip_text = "Extract from PFW3 archive."
text = "Scan & Extract PIGs
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 44.0
offset_right = 204.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -4

[node name="Remove Alpha" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Remove Alpha In PNGs"

[node name="Output Debug" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Output Original Files (Debug)"

[node name="LoadEXE" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("SLPM_662.65")
use_native_dialog = true

[node name="LoadPIG" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open File(s)"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("PIG.BIN, PIG2.BIN, *.BIN")
use_native_dialog = true

[node name="LoadPIGScan" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[node name="LoadFOLDER" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 400)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer/LoadEXE" to="." method="_on_load_exe_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadPIG" to="." method="_on_load_pig_pressed"]
[connection signal="pressed" from="HBoxContainer/LoadScanPIG" to="." method="_on_load_scan_pig_pressed"]
[connection signal="toggled" from="VBoxContainer/Remove Alpha" to="." method="_on_remove_alpha_toggled"]
[connection signal="toggled" from="VBoxContainer/Output Debug" to="." method="_on_output_debug_toggled"]
[connection signal="file_selected" from="LoadEXE" to="." method="_on_load_exe_file_selected"]
[connection signal="files_selected" from="LoadPIG" to="." method="_on_load_pig_files_selected"]
[connection signal="file_selected" from="LoadPIGScan" to="." method="_on_load_pig_scan_file_selected"]
[connection signal="dir_selected" from="LoadFOLDER" to="." method="_on_load_folder_dir_selected"]
